--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,18 +1,29 @@
 .app {
-display: flex;
+display: grid;
 justify-content: center;
-
+}
+body{
+  background-color: rgb(130, 74, 182);
 }
 h1{
   text-align: center;
+
 }
 #OpenCalc{
- border-radius: 20px;
- box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
- padding: 32px 16px;
+  border-radius: 20px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  padding: 32px 16px;
+
+}
+#mathInfo{
+background-image: url('https://i.pinimg.com/originals/43/28/c3/4328c30611e0c3a5556fa1d4cb35dae7.png') ;
+border-radius: 20px;
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+padding: 32px 16px;
 
 }
 p{
   background-color: rgba(6, 10, 7, 0.836);
-  color: white;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
 }
