--- a/calculator/src/components/Info.css
+++ b/calculator/src/components/Info.css
@@ -1,7 +1,8 @@
-#info{
-    border-radius: 20px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    padding: 32px 16px;
-    align-items: center;
+.facts{
+    transition-duration: 0.4s; 
+    border-radius: 8px;
   }
-  
+  .facts:hover {
+    background-color: #6e706e;
+    color: white;
+  }
