--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -12,15 +12,17 @@ h1{
 #OpenCalc{
   border-radius: 20px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  padding: 32px 16px;
-
+  padding: 140px 260px;
+   background-color: cadetblue;
 }
 #mathInfo{
-background-image: url('https://i.pinimg.com/originals/43/28/c3/4328c30611e0c3a5556fa1d4cb35dae7.png') ;
+
 border-radius: 20px;
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-padding: 32px 16px;
-
+padding: 140px 260px;
+background-color: cadetblue;
+margin: auto;
+margin-left: 699px;
 }
 p{
   background-color: rgba(6, 10, 7, 0.836);
