--- a/calculator/src/components/Info.css
+++ b/calculator/src/components/Info.css
@@ -1,8 +1,15 @@
+body{
+  justify-content: center;
+}
 .facts{
     transition-duration: 0.4s; 
     border-radius: 8px;
+    padding: 40px 50px;
   }
   .facts:hover {
     background-color: #6e706e;
     color: white;
+  }
+  p{
+    align-items: center;
   }
