--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,40 @@
+@media only screen and (max-width: 480px) {
+  /* ... */
+}
 .app {
 display: grid;
 justify-content: center;
+text-decoration: none;
 }
 body{
   background-color: rgb(155, 98, 207);
 }
 h1{
   text-align: center;
-
+  text-decoration: none;
+}
+.buttons{
+  display: flex;
+  justify-content: space-evenly;
 }
 #OpenCalc{
   border-radius: 20px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  padding: 130px 220px;
-   background-color: cadetblue;
-   font-weight: bold;
-   font-size: 20px;
-}
+  padding: 120px 200px;
+  background-color: cadetblue;
+  font-weight: bold;
+  font-size: 20px;
+  display: flex;
 
+}
 #mathInfo{
 border-radius: 20px;
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-padding: 130px 220px;
+padding: 120px 200px;
 background-color: cadetblue;
-margin: auto;
-margin-left: 670px;
 font-weight: bold;
 font-size: 20px;
+display: flex;
 }
 p{
   background-color: rgba(6, 10, 7, 0.836);
