--- a/src/App.css
+++ b/src/App.css
@@ -7,31 +7,33 @@ justify-content: center;
 text-decoration: none;
 }
 body{
-  background-color: rgb(155, 98, 207);
+  background-color: rgb(143, 55, 226);
 }
 h1{
   text-align: center;
+}
+a{
   text-decoration: none;
 }
 .buttons{
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 #OpenCalc{
-  border-radius: 20px;
+  border-radius: 40px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   padding: 120px 200px;
-  background-color: cadetblue;
+  background-color: rgba(86, 214, 218, 0.776);
   font-weight: bold;
   font-size: 20px;
   display: flex;
 
 }
 #mathInfo{
-border-radius: 20px;
+border-radius: 40px;
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 padding: 120px 200px;
-background-color: cadetblue;
+background-color: rgba(86, 214, 218, 0.776);
 font-weight: bold;
 font-size: 20px;
 display: flex;
