--- a/src/components/Calculator/Calculator.css
+++ b/src/components/Calculator/Calculator.css
@@ -1,33 +1,36 @@
-.display{
-          display: flex;
-          justify-content: center;
-          background-color: rgb(179, 175, 175);
-          padding: 30px;
-          font-size: 1.5rem;
-          position: relative;
-      }
-      .CalcBoard{
-        margin: 0 auto;
-        padding: 30px;
-        background-color: rgb(73, 73, 73);
-        display: flexbox;
-          border: 1px solid ;
-          width: 50%;
-          justify-content: center;
-          align-items: center;
-      }
-      /* .row{
-          display:grid;
-          grid-template-columns: repeat(4, 1fr); 
-      } */
-      .total{
-        position: absolute;
-        bottom: 2%;
-        right: 3%;
-      }
-      .row > * {
-          padding: 20px;
-      }
-      .row button:hover{
-            background-color: rgb(199, 194, 194);
-      }
+.display {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(179, 175, 175);
+  padding: 30px;
+  font-size: 1.5rem;
+  position: relative;
+}
+
+.CalcBoard {
+  margin: auto;
+  padding: 30px;
+  background-color: rgb(73, 73, 73);
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.total {
+  position: absolute;
+  bottom: 2%;
+  right: 3%;
+}
+
+.row>* {
+  padding: 30px;
+}
+
+.row button:hover {
+  background-color: rgb(199, 194, 194);
+}
