--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -1,17 +1,23 @@
+factsDisplay {
+  display: flex;
+}
 
 /* facts button */
-.facts{
-    transition-duration: 0.4s; 
-    border-radius: 20px;
-    padding: 30px 60px;
-    display: flex;
-    justify-content: center;
-  }
-  .facts:hover {
-    background-color: cadetblue;
-    color: white;
-  }
-  p{
-    display: flex;
-    justify-content: center;
-  }
+.facts {
+  background-color: rgb(81, 151, 194);
+  transition-duration: 0.3s;
+  border-radius: 30px;
+  padding: 30px;
+  display: flex;
+
+}
+
+.facts:hover {
+  background-color: rgb(99, 181, 232);
+
+}
+
+p {
+  display: flex;
+  justify-content: center;
+}
