--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@ body{
 }
 h1{
   text-align: center;
+  margin-bottom: 10%;
 }
 a{
   text-decoration: none;
 }
 .buttons{
   display: flex;
+  align-items: center;
   justify-content: space-around;
 }
 #OpenCalc{
@@ -39,7 +41,6 @@ font-size: 20px;
 display: flex;
 }
 p{
-  background-color: rgba(6, 10, 7, 0.836);
   color: rgb(255, 255, 255);
   font-size: 30px;
 }
