--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -7,9 +7,9 @@ factsDisplay {
   background-color: rgb(81, 151, 194);
   transition-duration: 0.3s;
   border-radius: 30px;
-  padding: 30px;
+  padding: 50px;
   display: flex;
-
+  margin: 50px;
 }
 
 .facts:hover {
@@ -20,4 +20,7 @@ factsDisplay {
 p {
   display: flex;
   justify-content: center;
+  margin-top: 100px;
+  border: 5px solid rgb(93, 9, 177);
+  border-radius: 10px;
 }
